@@ -1,4 +1,5 @@
-scriptfiles= gnubg.py batch.py database.py batch_win.py
+scriptfiles= gnubg.py batch.py database.py batch_win.py \
+             matchseries.py
 scriptsdir = $(pkgdatadir)/scripts
 scripts_DATA = $(scriptfiles)
 EXTRA_DIST = $(scriptfiles)
